feat(SEO): change 'description' meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#38A169" />
     <meta
       name="description"
-      content="Share information about your current on-site situation in an organised and audited way. Visible for everyone."
+      content="We believe people are best served through their local communities. By crowdsourcing information related to
+            your community in an organized and audited way that are visible to everyone, it can build up trust and
+            empower people to take actions with confidence."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logos/logo-icon-transparent.png" />
     <!--
